--- a/style.css
+++ b/style.css
@@ -3,12 +3,19 @@
 
 body{
     background-color: rgb(48, 42, 42);
+    color: white;
+    font-family:"Poppins", serif;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
 main{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 15px;
     width: 500px;
     height: 100vh;
 }
